# misasim

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  README.md
src/: breaks.rs  cli.rs  collapse.rs  false_dupe.rs  inversion.rs  io.rs  main.rs  misassembly.rs  misjoin.rs  sequence.rs  utils.rs
test/: .gitignore  TEST.md
test/config/: config.yaml  nucflag.toml
test/data/: .gitignore  HG00171_chr9_haplotype2-0000142.fa  HG00171_chr9_haplotype2-0000142_full.fa  HG002_chr10_cens.fa.gz.fai  HG002_chr10_cens.fa.gz.gzi  get_data.sh  multiple.json  region.bed  test.fa
test/workflow/: Snakefile
test/workflow/env/: py.yaml  tools.yaml
test/workflow/notebooks/: concensus.ipynb
test/workflow/scripts/: concensus.py
