[package]
name = "misasim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
itertools = "0.13.0"
noodles = { version = "0.75.0", features = ["fasta"] }
rand = "0.8.5"
suffix = "1.3.0"

[[bin]]
name = "misasim"
path = "src/main.rs"
