[package]
name = "misasim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
iset = "0.2.2"
itertools = "0.13.0"
log = "0.4.21"
noodles = { version = "0.75.0", features = ["bed", "core", "fasta"] }
rand = "0.8.5"
rayon = { version = "1.10.0", optional = true}
simple_logger = "5.0.0"

[[bin]]
name = "misasim"
path = "src/main.rs"

[features]
default = []
parallel = [ "dep:rayon" ]
